--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mongoose": "^5.12.0"
+    "mongoose": "^5.12.0",
+    "nodemon": "^3.0.3"
   }
 }
