--- a/src/config/.env.local
+++ b/src/config/.env.local
@@ -1,2 +1,2 @@
 PORT=3001
-MONGODB_URL=mongodb+srv://alvin24:alvin24@cluster0.zuskcfi.mongodb.net/
+MONGODB_URL=mongodb+srv://alvin24:alvin24@cluster0.zuskcfi.mongodb.net/WDFS
