--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdms",
+  "name": "registrar-wodrs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
   }
