--- a/src/config/.env.local
+++ b/src/config/.env.local
@@ -1,2 +1,3 @@
 PORT=3001
 MONGODB_URL=mongodb+srv://alvin24:alvin24@cluster0.zuskcfi.mongodb.net/WDFS
+MONGODB_URL_LOCAL="mongodb://127.0.0.1:27017/WDFS"
