--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@casl/ability": "^6.7.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
